--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <br>
             <button id="betButton" class="btn-primary">Сделать ставку</button>
             <div class="auto-cashout">
-    <label class="auto-cashout-switch">
-        <input type="checkbox" id="autoCashOutCheckbox">
-        <span class="auto-cashout-slider"></span>
-    </label>
-    <label for="autoCashOutCheckbox">Авто-вывод</label>
-    <input min="1,01" max="9999,00" type="number" class="inp2" id="autoCashOutInput" value="2.00" step="0.01" min="1.00" class="auto-cashout-input">x
-</div>
-
+                <label class="auto-cashout-switch">
+                    <input type="checkbox" id="autoCashOutCheckbox">
+                    <span class="auto-cashout-slider"></span>
+                </label>
+                <label for="autoCashOutCheckbox">Авто-вывод</label>
+                <input min="1.01" max="9999.00" type="number" class="inp2 auto-cashout-input" id="autoCashOutInput" value="2.00" step="0.01">
+                x
+            </div>
         </div>
         <div id="message" class="message"></div>
         <div class="height-indicators" id="heightIndicators"></div>
