--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="game-container">
         <div id="multiplierDisplay" class="multiplier-display">1.00x</div>
         <div class="airplane-container">
+         <div id="message" class="message"></div>
             <div class="airplane" id="airplane">✈️</div>
             <div class="line" id="line"></div>
         </div>
