--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="header-title" src="/2ACFE5F3-87D5-4F44-8C0B-8770769DA4A2.png">
+        <img class="header-title" src="https://ibb.co/0mgbPkw">
         <div id="balanceDisplay" class="balance-display">Баланс: 500.00</div>
     </header>
     <div class="game-container">
