--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="header-title" src="https://ibb.co/0mgbPkw">
+        <img class="header-title" src="https://i.ibb.co/n6HJhTW/A1-AC7-E76-C616-483-E-9219-5-F72898299-A7.png">
         <div id="balanceDisplay" class="balance-display">Баланс: 500.00</div>
     </header>
     <div class="game-container">
