--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header class="header">
+        <img src="/30A4B270-C94A-499D-BECE-3B0A18DA873E.png">
         <div id="balanceDisplay" class="balance-display">Баланс: 500.00</div>
     </header>
     <div class="game-container">
