--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="/30A4B270-C94A-499D-BECE-3B0A18DA873E.png">
+        <img class="header-title" src="logo.png">
         <div id="balanceDisplay" class="balance-display">Баланс: 500.00</div>
     </header>
     <div class="game-container">
@@ -18,22 +18,23 @@
             <div class="airplane" id="airplane">✈️</div>
             <div class="line" id="line"></div>
         </div>
+        <div class="cont-stav">
         <div class="controls">
-            <input type="number" min="1" max="250000" class="inp1" id="betInput" placeholder="Введите ставку" />
-            <br>
-            <button id="betButton" class="btn-primary">Сделать ставку</button>
-            <div class="auto-cashout">
+        <div class="auto-cashout">
                 <label class="auto-cashout-switch">
                     <input type="checkbox" id="autoCashOutCheckbox">
                     <span class="auto-cashout-slider"></span>
                 </label>
                 <label for="autoCashOutCheckbox">Авто-вывод</label>
-                <input min="1.01" max="9999.00" type="number" class="inp2 auto-cashout-input" id="autoCashOutInput" value="2.00" step="0.01">
-                x
+                <input type="number" class="inp2 auto-cashout-input" id="autoCashOutInput" value="2.00" step="0.01">
             </div>
+            <input type="number" min="1" max="250000" class="inp1" id="betInput" placeholder="Введите ставку" />
+            <br>
+            <button id="betButton" class="btn-primary">СТАВКА</button>
         </div>
         <div id="message" class="message"></div>
         <div class="height-indicators" id="heightIndicators"></div>
+    </div>
     </div>
     <script src="script.js"></script>
 </body>
