--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
 </head>
 <body>
     <header class="header">
-        <img class="header-title" src="logo.png">
+        <img class="header-title" src="/5D7D6D14-05AA-4A5E-A120-EA8E3906F1D3.png" alt="Logo">
         <div id="balanceDisplay" class="balance-display">Баланс: 500.00</div>
     </header>
     <div class="game-container">
-        <div id="multiplierDisplay" class="multiplier-display">1.00x</div>
         <div class="airplane-container">
-         <div id="message" class="message"></div>
+            <div id="message" class="message"></div>
+             <div id="multiplierDisplay" class="multiplier-display">1.00x</div>
             <div class="airplane" id="airplane">✈️</div>
             <div class="line" id="line"></div>
         </div>
-        <div class="cont-stav">
-        <div class="controls">
-        <div class="auto-cashout">
+        <div class="controls-container">
+            <div class="auto-cashout">
                 <label class="auto-cashout-switch">
                     <input type="checkbox" id="autoCashOutCheckbox">
                     <span class="auto-cashout-slider"></span>
@@ -29,12 +28,10 @@
                 <input type="number" class="inp2 auto-cashout-input" id="autoCashOutInput" value="2.00" step="0.01">
             </div>
             <input type="number" min="1" max="250000" class="inp1" id="betInput" placeholder="Введите ставку" />
-            <br>
-            <button id="betButton" class="btn-primary">СТАВКА</button>
+            <button id="betButton" class="btn btn-primary">СТАВКА</button>
         </div>
         <div id="message" class="message"></div>
         <div class="height-indicators" id="heightIndicators"></div>
-    </div>
     </div>
     <script src="script.js"></script>
 </body>
